fix read sql in jar